Increase min-width on the tree element to fix wrap-around on smaller screens

--- a/css/churchtree.css
+++ b/css/churchtree.css
@@ -2,7 +2,7 @@
 
 .tree {
 	text-align: center;
-	min-width: 900px;
+	min-width: 1200px;
 	width: auto;
 	height: 100vh;
 	white-space: nowrap;
